# csharp-python

./: .gitignore  設定.xlsx
backend/: .gitignore  ctl.ps1  logging.yml  main.py  mercari-shops-api.py  pyproject.toml  server.py
backend/src/: alembic.ini  main.py  server.py
backend/src/browser/: amazon.py  yahoo.py
backend/src/browser/driver/: chrome.py
backend/src/command/: __init__.py  base_command.py  commands.py  creator.py  executer.py  processor.py  yahoo_cmd.py
backend/src/config/: __init__.py  config.py
backend/src/db/: __init__.py  db.py  env.py  manager.py  repository.py
backend/src/db/versions/: 277901684e5e_add_test.py  4667cfa90013_add_hoge.py  85579a728521_add_setting.py  bd33f9648aeb_init.py  e9a00a107207_from.py  edc164933977_drop_test.py
backend/src/log/: config.py
backend/src/model/: models.py  modles.py  tables.py
backend/src/server/: server.py
backend/src/socket_lib/: client.py  server.py
backend/src/util/: __init__.py  classUtil.py  class_util.py  func_util.py  json_util.py  log.py  log_util.py  request_util.py  retry_util.py
frontend/: frontend.sln
frontend/frontend/: App.config  Const.cs  Form1.Designer.cs  Form1.cs  GetAsinForm.Designer.cs  GetAsinForm.cs  GetSellerForm.Designer.cs  GetSellerForm.cs  MainForm.Designer.cs  MainForm.cs  NLog.config  Program.cs  PythonExecutor.cs  SocketClientcs.cs  frontend.csproj  packages.config
frontend/frontend/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
frontend/frontend/backend/: BackendServer.cs
frontend/frontend/command/: BackendCmds.cs
frontend/frontend/db/: DBManager.cs
frontend/frontend/help/: VersionInfo.Designer.cs  VersionInfo.cs
frontend/frontend/model/: Models.cs
frontend/frontend/prelogin/: PreLoginForm.Designer.cs  PreLoginForm.cs
frontend/frontend/util/: JsonUtil.cs  (+2 more)
出品管理/: tamu_java_VC2.csv
(+6 files in other folders)
