[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["tamutamu <tamu.0.0.tamu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.8.2"
webdriver-manager = "^3.8.5"
pandas = "^1.5.3"
ruamel-yaml = "^0.17.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
