[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["tamutamu <tamu.0.0.tamu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.8.2"
webdriver-manager = "^3.8.5"
pandas = "^1.5.3"
ruamel-yaml = "^0.17.21"
sqlalchemy = "^2.0.6"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.1.1"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
