[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["tamutamu <tamu.0.0.tamu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.8.2"
webdriver-manager = "^3.8.5"
pandas = "^1.5.3"
ruamel-yaml = "^0.17.21"
sqlalchemy = {extras = ["mypy"], version = "^2.0.7"}
requests = "^2.28.2"
ulid-py = "^1.1.0"
alembic = "^1.10.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.1.1"
sqlalchemy = {extras = ["mypy"], version = "^2.0.7"}

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.mypy]
plugins = "sqlalchemy.ext.mypy.plugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
